build: update cmake and dependencies
Streamline CMakeLists across src/, tests/, and examples/. Update
dependency fetching and preset configuration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.30)
 project(imgui_util LANGUAGES CXX)
 
+set(CMAKE_CXX_STANDARD 26)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_VERIFY_INTERFACE_HEADER_SETS ON)
 
-# Warning flags are set per-target in src/CMakeLists.txt
+add_compile_options(-Wall -Wextra -Wpedantic -Wno-unused-parameter)
 
 option(IMGUI_UTIL_BUILD_TESTS "Build imgui_util tests" OFF)
 option(IMGUI_UTIL_BUILD_EXAMPLES "Build imgui_util examples" OFF)
